/*
 * Copyright RDK Management
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Library General Public
 * License as published by the Free Software Foundation, version 2
 * of the license.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
 * Library General Public License for more details.
 *
 * You should have received a copy of the GNU Library General Public
 * License along with this library; if not, write to the
 * Free Software Foundation, Inc., 51 Franklin St, Fifth Floor,
 * Boston, MA 02110-1301, USA.
*/

#pragma once

#include <plugins/Request.h>
#include <websocket/WebLink.h>
#include <websocket/WebTransfer.h>

namespace WPEFramework {
class IExchange {
public:
    class ICallback {
    public:
        virtual void Response(Core::ProxyType<Web::Request>, Core::ProxyType<Web::Response>) = 0;

        virtual ~ICallback(){};
    };

    virtual uint32_t Submit(Core::ProxyType<Web::Request>,
        Core::ProxyType<IExchange::ICallback>, uint32_t waitTime) = 0;

    virtual uint32_t Revoke(Core::ProxyType<IExchange::ICallback>) = 0;

    virtual ~IExchange(){};
};
}
